# collaborative-code-studio

./: .dockerignore  DEPLOY_RENDER.md  Dockerfile  README.md  docker-compose.yml  index.html  package-lock.json  package.json  render.yaml  tailwind.config.ts  test.db
.agent/workflows/: run_backend.md
backend/: Makefile  crud.py  database.py  main.py  models.py  openapi.yaml  pyproject.toml  tables.py  test.db
backend/routers/: execution.py  sessions.py
backend/tests/: conftest.py  test_api.py  test_integration.py
frontend/: README.md  index.html  package-lock.json  vite.config.ts
frontend/src/: App.tsx
frontend/src/components/: CodeEditor.tsx  LanguageSelector.tsx  OutputPanel.tsx  ShareDialog.tsx
frontend/src/components/ui/: button.tsx
frontend/src/pages/: Index.tsx  InterviewSession.tsx  JoinSession.tsx
frontend/src/services/: api.ts  executor.ts
src/: index.css
src/components/: CodeEditor.tsx  Header.tsx
src/pages/: Index.tsx
src/services/: api.ts
